--- a/software/part1/VGGNet_quant_2DSystolic_4bit.ipynb
+++ b/software/part1/VGGNet_quant_2DSystolic_4bit.ipynb
@@ -280,7 +280,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Test set: Accuracy: 9005/10000 (90%)\n",
+      "Test set: Accuracy: 9004/10000 (90%)\n",
       "\n"
      ]
     }
@@ -401,7 +401,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor(2.0522e-07, device='cuda:0', grad_fn=<MeanBackward0>)\n"
+      "tensor(3.2691e-07, device='cuda:0', grad_fn=<MeanBackward0>)\n"
      ]
     }
    ],
@@ -424,8 +424,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Write to activation.txt, psum.txt, and weight.txt\n",
+    "# Write to activation.txt, psum.txt, weight.txt, output.txt\n",
     "a_int = act_int[0,:,:,:]  # pick only one input out of batch\n",
+    "o_int = output_int[0,:,:,:]\n",
     "# a_int.size() = [8, 32, 32]\n",
     "\n",
     "# conv_int.weight.size() = torch.Size([8, 8, 3, 3])  <- output_ch, input_ch, ki, kj\n",
@@ -450,11 +451,11 @@
     "\n",
     "######## Padding before Convolution #######\n",
     "a_pad = torch.zeros(len(icg), len(nig)+padding*2, len(nig)+padding*2).cuda()\n",
-    "# a_pad.size() = [64, 32+2pad, 32+2pad]\n",
+    "# a_pad.size() = [8, 32+2pad, 32+2pad]\n",
     "a_pad[ :, padding:padding+len(nig), padding:padding+len(njg)] = a_int.cuda()\n",
     "a_pad = torch.reshape(a_pad, (a_pad.size(0), -1))\n",
-    "# a_pad.size() = [64, (32+2pad)*(32+2pad)]\n",
-    "\n",
+    "# a_pad.size() = [8, (32+2pad)*(32+2pad)]\n",
+    "o_int = torch.reshape(o_int, (o_int.size(0), -1))\n",
     "\n",
     "a_tile = torch.zeros(len(ic_tileg), array_size,    a_pad.size(1)).cuda() \n",
     "w_tile = torch.zeros(len(oc_tileg)*len(ic_tileg), array_size, array_size, len(kijg)).cuda() \n",
@@ -487,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "718203de-f860-4f1e-bbfd-0a142a1598f4",
    "metadata": {},
    "outputs": [],
@@ -516,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "f17b46e9-ec1c-48b6-ace6-efeca4d85e96",
    "metadata": {},
    "outputs": [
@@ -524,7 +525,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor(6.8665e-05, device='cuda:0', grad_fn=<SumBackward0>)\n"
+      "tensor(-2.2888e-05, device='cuda:0', grad_fn=<SumBackward0>)\n"
      ]
     }
    ],
@@ -536,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "3daefc73-0a93-4b79-8998-88c3519c3c12",
    "metadata": {},
    "outputs": [],
@@ -563,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "b6f8e7cf-9341-488f-9a3f-915138d6ee0b",
    "metadata": {},
    "outputs": [],
@@ -603,10 +604,9 @@
     "ic_tile_id = 0 \n",
     "oc_tile_id = 0 \n",
     "\n",
-    "\n",
     "kij = 0\n",
-    "nij = 200\n",
-    "psum_tile = psum[ic_tile_id,oc_tile_id,:,nij:nij+64,kij]  \n",
+    "nij = 0\n",
+    "psum_tile = psum[ic_tile_id,oc_tile_id,:,nij:nij+64,:]  \n",
     "# psum[len(ic_tileg), len(oc_tileg), array_size, len(p_nijg), len(kijg)]\n",
     "\n",
     "bit_precision = 16\n",
@@ -615,14 +615,42 @@
     "file.write('#time1col7[msb-lsb],time1col6[msb-lst],....,time1col0[msb-lst]#\\n')\n",
     "file.write('#................#\\n')\n",
     "\n",
-    "for i in range(psum_tile.size(1)): # time\n",
-    "    for j in range(psum_tile.size(0)): # col\n",
-    "        val = round(psum_tile[7-j,i].item())\n",
-    "        if val < 0:\n",
-    "            val = val + 2**bit_precision\n",
-    "        psum_bin = '{0:016b}'.format(val)\n",
+    "for y in range(9): # kij\n",
+    "    for i in range(psum_tile.size(1)): # time\n",
+    "        for j in range(psum_tile.size(0)): # col\n",
+    "            val = round(psum_tile[7-j,i,y].item())\n",
+    "            if val < 0:\n",
+    "                val = val + 2**bit_precision\n",
+    "            psum_bin = '{0:016b}'.format(val)\n",
+    "            for k in range(bit_precision):\n",
+    "                file.write(psum_bin[k])\n",
+    "        #file.write(' ')  # for visibility with blank between words, you can use\n",
+    "    file.write('\\n')\n",
+    "file.close() #close file  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "2d694c65-632d-48d7-a07d-01964586ca2f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tile_id = 0 \n",
+    "nij = 0 \n",
+    "X = o_int[:,nij:nij+64]  # [array row num, time_steps]\n",
+    "\n",
+    "bit_precision = 16\n",
+    "file = open('output.txt', 'w') #write to file\n",
+    "file.write('#time0row7[msb-lsb],time0row6[msb-lst],....,time0row0[msb-lst]#\\n')\n",
+    "file.write('#time1row7[msb-lsb],time1row6[msb-lst],....,time1row0[msb-lst]#\\n')\n",
+    "file.write('#................#\\n')\n",
+    "\n",
+    "for i in range(X.size(1)):  # time step\n",
+    "    for j in range(X.size(0)): # row #\n",
+    "        X_bin = '{0:016b}'.format(round(X[7-j,i].item()))\n",
     "        for k in range(bit_precision):\n",
-    "            file.write(psum_bin[k])        \n",
+    "            file.write(X_bin[k])        \n",
     "        #file.write(' ')  # for visibility with blank between words, you can use\n",
     "    file.write('\\n')\n",
     "file.close() #close file  "
@@ -631,7 +659,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2d694c65-632d-48d7-a07d-01964586ca2f",
+   "id": "fb3810b8-1366-4021-ad2c-6ed16d9336a0",
    "metadata": {},
    "outputs": [],
    "source": []
