Minor correctness fix to output file writing, does not affect this case

--- a/software/part1/VGGNet_quant_2DSystolic_4bit.ipynb
+++ b/software/part1/VGGNet_quant_2DSystolic_4bit.ipynb
@@ -648,7 +648,10 @@
     "\n",
     "for i in range(X.size(1)):  # time step\n",
     "    for j in range(X.size(0)): # row #\n",
-    "        X_bin = '{0:016b}'.format(round(X[7-j,i].item()))\n",
+    "        val = round(X[7-j,i].item())\n",
+    "        if val < 0:\n",
+    "                val = val + 2**bit_precision\n",
+    "        X_bin = '{0:016b}'.format(val)\n",
     "        for k in range(bit_precision):\n",
     "            file.write(X_bin[k])        \n",
     "        #file.write(' ')  # for visibility with blank between words, you can use\n",
@@ -659,7 +662,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fb3810b8-1366-4021-ad2c-6ed16d9336a0",
+   "id": "839c7b3e-ea42-4dca-891e-5d4fecd3e475",
    "metadata": {},
    "outputs": [],
    "source": []
